# geozones

./: CMakeLists.txt  README.md  package.xml
config/: geofences.json  geofencing.yaml
include/as2_node_template/: as2_node_template.hpp
include/geofencing/: geofence.hpp  geofencing.hpp
include/geostructures/: geostructures.hpp
include/geozones/: geozones.hpp  json.hpp  pnpoly.hpp
launch/: as2_node_template_launch.py  geofencing_launch.py  geostructures_launch.py  geozones_launch.py
msg/: Geofence.msg
src/: as2_node_template.cpp  as2_node_template_node.cpp  geofencing.cpp  geofencing_node.cpp  geostructures.cpp  geostructures_node.cpp  geozones.cpp  geozones_node.cpp
srv/: GetGeofence.srv  GetGeostructure.srv  GetGeozone.srv  SetGeofence.srv  SetGeostructure.srv  SetGeozone.srv
